--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/grayLight"
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,20 +14,24 @@
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/appbar_padding_top"
-        android:background="@color/colorAccent">
+        android:paddingTop="8dp"
+        android:background="@color/gray_light">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabIndicatorColor="@color/tabIndicator">
+            android:background="@color/gray_light"
+            app:tabSelectedTextColor="@color/colorAccent"
+            app:tabTextColor="@color/grayFirm"
+            app:tabTextAppearance="@style/TabLayoutTextStyle">
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_text_1" />
+                android:text="@string/tab_text_1"
+                android:layout_gravity="left"/>
 
             <android.support.design.widget.TabItem
                 android:id="@+id/tabItem2"
@@ -39,10 +43,18 @@
                 android:id="@+id/tabItem3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tab_text_3" />
+                android:text="@string/tab_text_3"
+                android:layout_gravity="right"/>
 
         </android.support.design.widget.TabLayout>
     </android.support.design.widget.AppBarLayout>
+
+    <View
+        android:id="@+id/barborder"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@id/container"
+        android:background="@color/gray_dark"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
