--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
-    <color name="colorPrimaryDark">#484848</color>
-    <color name="colorAccent">#D34747</color>
-    <color name="tabIndicator">#BBBBBB</color>
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#292D3D</color>
+    <color name="grayLight">#F0F3F8</color>
+    <color name="grayFirm">#888888</color>
+    <color name="greenHighlight">#24AC61</color>
+    <color name="colorAccent">#EC693C</color>
+    <color name="finkiBlue">#4293D1</color>
+    <color name="redditRed">#FF3F18</color>
+    <color name="orange">#EC693C</color>
+    <color name="dark_orange">#EC5B29</color>
+
+    <color name="cornflower_blue">#6274e2</color>
+    <color name="cornflower_blue_dark">#303F9F</color>
+    <color name="cornflower_blue_darkest">#2d3a93</color>
+    <color name="gray">#ebebeb</color>
+    <color name="gray_light">#e8e8e8</color>
+    <color name="gray_transparent">#a6efefef</color>
+    <color name="gray_dark">#858585</color>
+    <color name="gray_dark_transparent">#ae858585</color>
+    <color name="gray_darkest">#ae282828</color>
+    <color name="black">#000000</color>
+    <color name="black_10">#19000000</color>
+    <color name="ivory">#f8efe6</color>
+    <color name="ivory_dark">#f7e8d9</color>
+    <color name="green">#38be55</color>
+    <color name="green_dark">#2da346</color>
+    <color name="red">#e94f4f</color>
+    <color name="brown">#4e342e</color>
+
+    <color name="gray_background">#F0F3F8</color>
+    <color name="morty_font">#8C8C8C</color>
 </resources>
